--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
-    "express-session": "^1.17.0"
+    "express-session": "^1.17.0",
+    "mysql": "^2.18.1"
   }
 }
