--- a/package.json
+++ b/package.json
@@ -20,13 +20,10 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
-    "cheerio": "^1.0.0-rc.3",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.0",
-    "mysql": "^2.18.1",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.5"
+    "mysql": "^2.18.1"
   }
 }
